--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ adapters = { default-features = false, package = 'storage-adapters', version = '
 fetch-price = { default-features = false, package = 'fetch-price', version = '0.4.1', git = 'https://github.com/Setheum-Labs/fetch-price' }
 serp-tes = { default-features = false, package = 'serp-tes', version = '0.4.1', git = 'https://github.com/Setheum-Labs/serp-tes' }
 stp258 = { default-features = false, package = 'stp258', version = '0.4.1', git = 'https://github.com/Setheum-Labs/stp258' }
+orml-traits = { default-features = false, version = '0.4.0' }
 serde = { version = "1.0.123", optional = true }
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
@@ -50,4 +51,5 @@ std = [
     "stp258/std",
     "sp-runtime/std",
     "sp-std/std",
+    "orml-traits/std"
 ]
