--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,7 @@ homepage = 'https://setheum.xyz'
 license = 'Apache-2.0 License'
 name = 'serp-market'
 repository = 'https://github.com/Setheum-Labs/Setheum/'
-version = '0.4.1'
-
-[package.metadata.docs.rs]
-targets = ['x86_64-unknown-linux-gnu']
+version = '0.4.3-dev'
 
 [dependencies]
 adapters = { default-features = false, package = 'storage-adapters', version = '0.4.1', git = 'https://github.com/Setheum-Labs/storage-adapters' }
