Add tokens and traits of STP-258

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,10 @@ sp-std = { default-features = false, optional = true, version = '3.0.0' }
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
 
+stp258 = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
+stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
 stp258-traits = { version = "0.5.0-dev", default-features = false, git = "https://github.com/Setheum-Labs/stp258-traits" }
+
 num-rational = { default-features = false, version = '0.4.0' }
 fixed = { default-features = false, version = '1.6.0' }
 
@@ -27,8 +30,6 @@ funty = { version = "=1.1.0", default-features = false } # https://github.com/bi
 sp-core = '3.0.0'
 sp-runtime = { default-features = false, version = '3.0.0' }
 pallet-balances = "3.0.0"
-stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
-stp258 = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
 
 [features]
 default = ['std']
@@ -42,6 +43,8 @@ std = [
     "num-rational/std",
 	"serde/std",
     "stp258/std",
+    "stp258-tokens/std",
+    "stp258-traits/std",
     "sp-io/std",
     "sp-runtime/std",
     "sp-std/std",
