Generally add Stable Currencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,14 +17,17 @@ sp-std = { default-features = false, optional = true, version = '3.0.0' }
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
 
-stp258 = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
+#setheum-deps 
+serp-tes = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/serp-tes"}
+stp258-currencies = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258-currencies' }
 stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
-stp258-traits = { version = "0.5.0-dev", default-features = false, git = "https://github.com/Setheum-Labs/stp258-traits" }
-
-num-rational = { default-features = false, version = '0.4.0' }
-fixed = { default-features = false, version = '1.6.0' }
+stp258-traits = { default-features = false, version = "0.5.0-dev",  git = "https://github.com/Setheum-Labs/stp258-traits" }
 
 funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
+
+num-rational = { default-features = false, version = '0.4.0' }
+num-traits = { version = "0.2.14", default-features = false }
+fixed = { default-features = false, version = '1.6.0' }
 
 [dev-dependencies]
 sp-core = '3.0.0'
@@ -34,18 +37,17 @@ pallet-balances = "3.0.0"
 [features]
 default = ['std']
 std = [
-    "adapters/std",
     'codec/std',
-    "fetch-price/std",
     "fixed/std",
     'frame-support/std',
     'frame-system/std',
     "num-rational/std",
+	"num-traits/std",
 	"serde/std",
-    "stp258/std",
-    "stp258-tokens/std",
-    "stp258-traits/std",
     "sp-io/std",
     "sp-runtime/std",
     "sp-std/std",
+    "stp258-currencies/std",
+    "stp258-tokens/std",
+    "stp258-traits/std",
 ]
