Fixes in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-authors = ['Setheum Labs<https://github.com/Setheum-Labs
+authors = 'Setheum Labs<https://github.com/Setheum-Labs'
 description = 'Setheum Elastic Reserve Protocol (SERP) Market Pallet'
 edition = '2018'
 homepage = 'https://setheum.xyz'
 license = 'Apache-2.0 License'
 name = 'serp-market'
 repository = 'https://github.com/Setheum-Labs/Setheum/'
-version = '0.5.5-dev'
+version = '0.5.0-dev'
 
 [dependencies]
 serde = { version = "1.0.123", optional = true }
@@ -42,8 +42,8 @@ std = [
     'frame-support/std',
     'frame-system/std',
     "num-rational/std",
-	  "num-traits/std",
-	  "serde/std",
+	"num-traits/std",
+	"serde/std",
     "sp-io/std",
     "sp-runtime/std",
     "sp-std/std",
