--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = 'Setheum Labs<https://github.com/Setheum-Labs'
+authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
 description = 'Setheum Elastic Reserve Protocol (SERP) Market Pallet'
 edition = '2018'
 homepage = 'https://setheum.xyz'
