--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ frame-system = { default-features = false, version = '3.0.0' }
 
 #setheum-deps 
 serp-tes = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/serp-tes", branch = "general-stable-currencies"}
-stp258-currencies = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258-currencies' }
+stp258-currencies = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
 stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
 stp258-traits = { default-features = false, version = "0.5.0-dev",  git = "https://github.com/Setheum-Labs/stp258-traits" }
 
