--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,15 @@ version = '0.5.0-dev'
 serde = { version = "1.0.123", optional = true }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
 sp-io = { version = "3.0.0", default-features = false }
+sp-runtime = { version = "3.0.0", default-features = false }
 sp-std = { default-features = false, optional = true, version = '3.0.0' }
 
 frame-support = { default-features = false, version = '3.0.0' }
 frame-system = { default-features = false, version = '3.0.0' }
 
 #setheum-deps 
+stp258-currencies = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
+stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
 stp258-traits = { default-features = false, version = "0.5.0-dev",  git = "https://github.com/Setheum-Labs/stp258-traits" }
 
 funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
@@ -31,10 +34,6 @@ sp-core = '3.0.0'
 sp-runtime = { default-features = false, version = '3.0.0' }
 pallet-balances = "3.0.0"
 
-serp-tes = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/serp-tes", branch = "general-stable-currencies"}
-stp258-currencies = { default-features = false, version = "0.5.0-dev", git = 'https://github.com/Setheum-Labs/stp258' }
-stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
-
 [features]
 default = ['std']
 std = [
@@ -46,6 +45,7 @@ std = [
 	"num-traits/std",
 	"serde/std",
     "sp-io/std",
+	"sp-runtime/std",
     "sp-runtime/std",
     "sp-std/std",
     "stp258-currencies/std",
