--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,30 +1,32 @@
 [package]
-name = "serp-market"
-version = "0.5.0-dev"
 authors = ['Setheum Labs<https://github.com/Setheum-Labs>']
-edition = "2018"
+description = 'Setheum Elastic Reserve Protocol (SERP) Market Pallet'
+edition = '2018'
+homepage = 'https://setheum.xyz'
+license = 'Apache-2.0 License'
+name = 'serp-market'
+repository = 'https://github.com/Setheum-Labs/Setheum/'
+version = '0.5.0-dev'
 
 [dependencies]
-serde = { version = "1.0.101", optional = true }
+serde = { version = "1.0.111", optional = true }
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
 sp-runtime = { version = "3.0.0", default-features = false }
-sp-std = { default-features = false, optional = true, version = '3.0.0' }
+sp-io = { version = "3.0.0", default-features = false }
+sp-std = { version = "3.0.0", default-features = false }
 
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
-stp258-traits = { default-features = false, version = "0.5.0-dev",  git = "https://github.com/Setheum-Labs/stp258-traits", branch = "new-serp-market" }
 
-funty = { version = "1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
+stp258-traits = { version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "alpha" }
+orml-utilities = { version = "0.4.0", default-features = false }
 
-num-rational = { default-features = false, version = '0.4.0' }
-num-traits = { version = "0.2.14", default-features = false }
-fixed = { default-features = false, version = '1.6.0' }
+funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
 
 [dev-dependencies]
 sp-core = "3.0.0"
-sp-io = "3.0.0"
 pallet-balances = "3.0.0"
-stp258-tokens = { default-features = false, version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
+stp258-tokens = { version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
 
 [features]
 default = ["std"]
@@ -32,8 +34,10 @@ std = [
 	"serde",
 	"codec/std",
 	"sp-runtime/std",
-    "sp-std/std",
+	"sp-std/std",
+	"sp-io/std",
 	"frame-support/std",
 	"frame-system/std",
-    "stp258-traits/std",
+	"stp258-traits/std",
+	"orml-utilities/std",
 ]
