--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,15 +18,17 @@ sp-std = { version = "3.0.0", default-features = false }
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 
-stp258-traits = { version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "alpha" }
+stp258-traits = { version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "serp-market" }
 orml-utilities = { version = "0.4.0", default-features = false }
 
 funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
+fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed", package = "substrate-fixed" }
 
 [dev-dependencies]
 sp-core = "3.0.0"
 pallet-balances = "3.0.0"
 stp258-tokens = { version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
+stp258-currencies = { version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258"}
 
 [features]
 default = ["std"]
@@ -40,4 +42,5 @@ std = [
 	"frame-system/std",
 	"stp258-traits/std",
 	"orml-utilities/std",
+	"fixed/std",
 ]
