--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ homepage = 'https://setheum.xyz'
 license = 'Apache-2.0 License'
 name = 'serp-market'
 repository = 'https://github.com/Setheum-Labs/Setheum/'
-version = '0.5.0-dev'
+version = '0.5.1-dev'
 
 [dependencies]
 serde = { version = "1.0.111", optional = true }
@@ -18,7 +18,7 @@ sp-std = { version = "3.0.0", default-features = false }
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 
-stp258-traits = { version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "alpha" }
+stp258-traits = { version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "pretty-messy" }
 orml-utilities = { version = "0.4.0", default-features = false }
 
 funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
@@ -27,7 +27,7 @@ fixed = { default-features = false, git = "https://github.com/encointer/substrat
 [dev-dependencies]
 sp-core = "3.0.0"
 pallet-balances = "3.0.0"
-stp258-tokens = { version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
+stp258-tokens = { version = "0.5.1-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
 stp258-currencies = { version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258"}
 
 [features]
