--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ homepage = 'https://setheum.xyz'
 license = 'Apache-2.0 License'
 name = 'serp-market'
 repository = 'https://github.com/Setheum-Labs/Setheum/'
-version = '0.5.1-dev'
+version = '0.5.2'
 
 [dependencies]
 serde = { version = "1.0.111", optional = true }
@@ -18,17 +18,15 @@ sp-std = { version = "3.0.0", default-features = false }
 frame-support = { version = "3.0.0", default-features = false }
 frame-system = { version = "3.0.0", default-features = false }
 
-stp258-traits = { version = '0.5.0-dev', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "pretty-messy" }
+stp258-traits = { version = '0.5.2', git = "https://github.com/Setheum-Labs/stp258-traits", branch = "tes-markr" }
 orml-utilities = { version = "0.4.0", default-features = false }
 
-funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed", package = "substrate-fixed" }
+funty = { version = "1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105
 
 [dev-dependencies]
 sp-core = "3.0.0"
 pallet-balances = "3.0.0"
-stp258-tokens = { version = "0.5.1-dev", git = "https://github.com/Setheum-Labs/stp258-tokens"}
-stp258-currencies = { version = "0.5.0-dev", git = "https://github.com/Setheum-Labs/stp258"}
+stp258-tokens = { version = "0.5.2", git = "https://github.com/Setheum-Labs/stp258-tokens"}
 
 [features]
 default = ["std"]
@@ -42,5 +40,4 @@ std = [
 	"frame-system/std",
 	"stp258-traits/std",
 	"orml-utilities/std",
-	"fixed/std",
 ]
