--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ funty = { version = "1.1.0", default-features = false } # https://github.com/bit
 sp-core = "3.0.0"
 pallet-balances = "3.0.0"
 stp258-tokens = { version = "0.5.2", git = "https://github.com/Setheum-Labs/stp258-tokens"}
+stp258-standard = { version = "0.5.2", git = "https://github.com/Setheum-Labs/stp258-standard"}
 
 [features]
 default = ["std"]
